changed contact section

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 							<header>
 								<h2>Contact</h2>
 							</header>
-							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume. </p>
+							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume and testimonial. </p>
 
 							<!-- Social Icons -->
 								<ul class="icons">
